--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 My Name is Varghese
 I am attending Git Adv Training Class
 
-2nd section of the code 
+2nd section of the code
+3rd section of the code  
