--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@ My Name is Varghese
 I am attending Git Adv Training Class
 
 2nd section of the code
-3rd section of the code  
+3rd section of the code
+4th section of the code  
