Commit from GitHub

--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ I am attending Git Adv Training Class
 4th section of the code
 5th section of the code
 6th section of the code  
+7th section of the code
