--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 My Name is Varghese
 I am attending Git Adv Training Class
-
+filling the space
 2nd section of the code
 3rd section of the code
 4th section of the code
